Refactored the keycodes to enum classes and started to work on input polling

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 -camera
-	-glm
+	-glm				ok
 	-input polling
-		-keyboard events
+-keyboard events			don't need these for input polling after all
 -imgui
 -model loading
 	-assimp
