--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 -camera
 	-glm				ok
-	-input polling
--keyboard events			don't need these for input polling after all
+	-input polling			ok
+		-keyboard events	ok
+		(We'll use our event system to decouple the input from glfw and the window object)
 -imgui
 -model loading
 	-assimp
