Uncommented the uniform setting code. Added width and height getters to the window, and tested a perspective projection matrix

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@
 	-input polling			ok
 		-keyboard events	ok
 		(We'll use our event system to decouple the input from glfw and the window object)
+	-shader uniforms		ok for now, but need to implement more uniform types later
 -imgui
 -model loading
 	-assimp
